Contact's related List :Opportunity, Case

--- a/templates/contacts/show.html
+++ b/templates/contacts/show.html
@@ -283,7 +283,7 @@
                                 <div class="dashboard-stat cards-med">
                                   
                                   <div class="details">
-                                    <a href="/#/accounts/show/<%= account.id %>"><h3 class="relatedcardOppTitle">
+                                    <a href=""><h3 class="relatedcardOppTitle">
                                      <%=opp.name%></h3></a>
                                     <div class="desc">                           
                                      <span><a  class="desc" href="/#/search/type:Opportunity <%=opp.amount%>"># <%=opp.amount%></a> - </span>
