--- a/templates/contacts/list.html
+++ b/templates/contacts/list.html
@@ -146,6 +146,19 @@
                                   
                 </div>
               </div>
+               <div ng-hide="contacts" class="span12 responsive" data-tablet="span6" data-desktop="span12">
+                <div class="dashboard-stat cards">
+                  
+                  
+                  <div class="blank_slate_arrow"></div>
+                  <div class="blank_slate_body">
+                      <img src="/static/img/contacts_blank.png">
+                      <p class="lead">Each contact gets a page in i/oGrow. You and your co-workers can add notes from calls,conversations, meetings, or any other historic information about this person.</p>
+                  </div>
+               
+                                  
+                </div>
+              </div>
               </div>
             </div>
           <div class="row-fluid">
