--- a/templates/opportunities/list.html
+++ b/templates/opportunities/list.html
@@ -161,6 +161,19 @@
                                   
                 </div>
               </div>
+               <div ng-hide="opportunities" class="span12 responsive" data-tablet="span6" data-desktop="span12">
+                <div class="dashboard-stat cards">
+                  
+                  
+                  <div class="blank_slate_arrow"></div>
+                  <div class="blank_slate_body">
+                      <img src="/static/img/opportunities_blank.png">
+                      <p class="lead">Know which proposals/bids are pending, which you’ve won, and which you’ve lost. Enter notes about the opportunities, attach proposals or contracts to the opportunities, and keep a log of any changes.</p>
+                  </div>
+               
+                                  
+                </div>
+              </div>
               </div>
             </div>
           <div class="row-fluid">
