--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -168,6 +168,19 @@
                   </a>                 
                 </div>
               </div>
+               <div ng-hide="cases" class="span12 responsive" data-tablet="span6" data-desktop="span12">
+                <div class="dashboard-stat cards">
+                  
+                  
+                  <div class="blank_slate_arrow"></div>
+                  <div class="blank_slate_body">
+                      <img src="/static/img/cases_blank.png">
+                      <p class="lead">The main goal of cases is to assist collaboration and focus of teams on delivering amazing customer experience.</p>
+                  </div>
+               
+                                  
+                </div>
+              </div>
             
           
               </div>
