--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -140,7 +140,7 @@
                   </a>                 
                 </div>
               </div>
-               <div ng-hide="leads" class="span12 responsive" data-tablet="span6" data-desktop="span12">
+               <div ng-show="blankState" class="span12 responsive" data-tablet="span6" data-desktop="span12">
                 <div class="dashboard-stat cards">
                   
                   
