Google Calendar sync

--- a/templates/base.html
+++ b/templates/base.html
@@ -232,7 +232,7 @@
 
 
 
-      //var ROOT = '/_ah/api';
+      var ROOT = '/_ah/api';
 
 
 
@@ -240,7 +240,7 @@
     
   
 
-      var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+      //var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
    
 
@@ -272,7 +272,7 @@
 
     function signin(mode, callback) {
       gapi.auth.authorize({client_id: "{{CLIENT_ID}}",
-        scope: "https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/drive", immediate: mode},
+        scope: "https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/drive https://www.googleapis.com/auth/calendar", immediate: mode},
         callback);
     }
     
