--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -238,7 +238,7 @@ function onSignInCallback(authResult) {
                      <div class="signin-box"> 
                       <div id="gConnect">
                           <button class="g-signin"
-                              data-scope="https://www.googleapis.com/auth/plus.login https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/drive"
+                              data-scope="https://www.googleapis.com/auth/plus.login https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/drive https://www.googleapis.com/auth/calendar"
                               data-requestvisibleactions="http://schemas.google.com/AddActivity"
                               data-clientId="{{ CLIENT_ID }}"
                               data-accesstype="offline"
