Comment insert with discussion key, Comment list with discussion key

--- a/templates/accounts/note_show.html
+++ b/templates/accounts/note_show.html
@@ -46,7 +46,7 @@
       <!-- BEGIN PORTLET-->
         <div class="portlet">
           <div class="portlet-title line">
-              <div class="caption"><i class="fa fa-comments"></i><%=note.title%></div>
+              <div class="caption"><i class="fa fa-comments"></i>Note > <%=note.title%></div>
           </div>
           <div class="portlet-body">
              <ul class="chats">
