Fix adding new records UI

--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -42,7 +42,7 @@
                 <h3 id="myModalLabel">{{_("New Case")}}</h3>
               </div>
               <div class="modal-body">
-                 <form id="addCase" name="addCase" ng-submit="save(casee)" class="form-horizontal"> 
+                 <form id="addCase" name="addCase" ng-keyup="addCaseOnKey(casee)" class="form-horizontal"> 
                   <fieldset>
                   
                     
@@ -116,7 +116,9 @@
               </div>
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                <button  type="submit" class="btn blue addContactNow">{{_("Add Case")}}</button>
+                
+                <input ng-hide="isLoading" ng-click="save(casee)" type="submit" class="btn green" value="Add this case">
+                <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
               </div>
                </form>
        </div>
