--- a/templates/accounts/list.html
+++ b/templates/accounts/list.html
@@ -42,7 +42,7 @@
                 <h3 id="myModalLabel">{{_("New Account")}}</h3>
               </div>
               <div class="modal-body">
-                 <form id="addAccount" name="addaccount" ng-submit="save(account)" class="form-horizontal"> 
+                 <form id="addAccount" name="addaccount"  class="form-horizontal"  ng-keyup="addAccountOnKey(account)"> 
                   <fieldset>
                   
                     
@@ -51,7 +51,7 @@
                         <label  class="required control-label">{{_("Name")}} *</label>
                        
                         <div class="controls">
-                          <input type="text" required id="id_name" ng-model="account.name">
+                          <input type="text" required  ng-model="account.name">
                           
                         </div>
                     </div>
@@ -59,7 +59,7 @@
                         <label  class="required control-label">{{_("Type")}}</label>
                        
                         <div class="controls">
-                          <input type="text"  id="id_name" ng-model="account.account_type" placeholder="eg: customer, partner, investor">
+                          <input type="text"   ng-model="account.account_type" placeholder="eg: customer, partner, investor">
                           
                         </div>
                     </div>
@@ -67,7 +67,7 @@
                         <label  class="required control-label">{{_("Industry")}} </label>
                        
                         <div class="controls">
-                          <input type="text"  id="id_name" ng-model="account.industry" placeholder="eg: tech, health, energy">
+                          <input type="text"   ng-model="account.industry" placeholder="eg: tech, health, energy">
                           
                         </div>
                     </div>
@@ -94,7 +94,9 @@
               </div>
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                <button  type="submit" class="btn blue addContactNow">{{_("Add Account")}}</button>
+                
+                <input ng-hide="isLoading" ng-click="save(account)" type="submit" class="btn green" value="Add this account">
+                <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
               </div>
                </form>
        </div>
