--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!--[if IE 8]> <html lang="en" class="ie8" ng-app="crmEngine"> <![endif]-->
-<!--[if IE 9]> <html lang="en" class="ie9" ng-app="crmEngine"> <![endif]-->
+<!--[if IE 8]> <html lang="en" class="ie8" > <![endif]-->
+<!--[if IE 9]> <html lang="en" class="ie9" > <![endif]-->
 <!--[if !IE]><!--> <html xmlns:ng="http://angularjs.org"> <!--<![endif]-->
 <!-- BEGIN HEAD -->
 <head>
@@ -186,8 +186,8 @@
   <!-- BEGIN JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
   <!-- BEGIN CORE PLUGINS -->   
 
-  <script src="static/plugins/jquery-1.10.1.min.js"  type="text/javascript"></script>
-  <script src="static/plugins/jquery-migrate-1.2.1.min.js"  type="text/javascript"></script>
+  <script src="static/plugins/jquery-2.0.3.min.js"  type="text/javascript"></script>
+
    <script src="static/app/scripts/vendor/angular.js" ></script>
   <script type="text/javascript">
     window.is_signed_in = false;
@@ -230,7 +230,7 @@
        window.authResult = undefined;
        var apisToLoad;
 
-    //var ROOT = '/_ah/api';
+    var ROOT = '/_ah/api';
 
 
 
@@ -239,7 +239,7 @@
     
 
 
-    var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+    //var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
