--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -42,7 +42,7 @@
                 <h3 id="myModalLabel">{{_("New Lead")}}</h3>
               </div>
               <div class="modal-body">
-                 <form id="addAccount" name="addaccount" ng-submit="save(lead)" class="form-horizontal"> 
+                 <form id="addLead" name="addaccount" ng-keyup="addLeadOnKey(lead)" class="form-horizontal"> 
                   <fieldset>
                   
                     
@@ -94,7 +94,9 @@
               </div>
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                <button  type="submit" class="btn blue addContactNow">{{_("Add Lead")}}</button>
+                
+                <input ng-hide="isLoading" ng-click="save(lead)" type="submit" class="btn green" value="Add this lead">
+                <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
               </div>
                </form>
        </div>
