--- a/templates/contacts/list.html
+++ b/templates/contacts/list.html
@@ -167,11 +167,11 @@
             <div class="pagination pull-right" ng-hide="isLoading">
                   
                   <ul>
-                    <li ng-show="pagination.prev"><button ng-click="listPrevPageItems()" id="sample_editable_1_new" class="btn">
+                    <li ng-show="contactpagination.prev"><button ng-click="listPrevPageItems()" id="sample_editable_1_new" class="btn">
                     {{_("Prev")}} 
                     </button></li>
-                    <li ng-repeat="page in pagination.pages" ng-class='{active: page.isCurrent}'><a  href="#/accounts/p/<%= page.id %>"><%= page.id %></a></li>
-                    <li  ng-show="pagination.next"><button ng-click="listNextPageItems()"  class="btn">
+                    <li ng-repeat="page in contactpagination.pages" ng-class='{active: page.isCurrent}'><a  href="#/accounts/p/<%= page.id %>"><%= page.id %></a></li>
+                    <li  ng-show="contactpagination.next"><button ng-click="listNextPageItems()"  class="btn">
                     {{_("Next")}} 
                     </button></li>
                   </ul>
