--- a/templates/opportunities/list.html
+++ b/templates/opportunities/list.html
@@ -182,11 +182,11 @@
             <div class="pagination pull-right" ng-hide="isLoading">
                   
                   <ul>
-                    <li ng-show="pagination.prev"><button ng-click="listPrevPageItems()" id="sample_editable_1_new" class="btn">
+                    <li ng-show="opppagination.prev"><button ng-click="listPrevPageItems()" id="sample_editable_1_new" class="btn">
                     {{_("Prev")}} 
                     </button></li>
-                    <li ng-repeat="page in pagination.pages" ng-class='{active: page.isCurrent}'><a  href="#/accounts/"><%= page.id %></a></li>
-                    <li  ng-show="pagination.next"><button ng-click="listNextPageItems()"  class="btn">
+                    <li ng-repeat="page in opppagination.pages" ng-class='{active: page.isCurrent}'><a  href="#/accounts/"><%= page.id %></a></li>
+                    <li  ng-show="opppagination.next"><button ng-click="listNextPageItems()"  class="btn">
                     {{_("Next")}} 
                     </button></li>
                   </ul>
