Retrieve tedj's commit

--- a/templates/accounts/show.html
+++ b/templates/accounts/show.html
@@ -429,7 +429,7 @@
                                         </button></li>
                                       </ul>
                                     </div>
-                                    <h3 class="pagination pull-right" ng-show="isLoading">Loading...</h3>
+                                    <!--h3 class="pagination pull-right" ng-show="isLoading">Loading...</h3-->
                               </div>
 
 
