--- a/templates/base.html
+++ b/templates/base.html
@@ -229,7 +229,7 @@
        window.is_signed_in = false;
        window.authResult = undefined;
        var apisToLoad;
-       var ROOT = '/_ah/api';
+       //var ROOT = '/_ah/api';
 
 
     var ROOT = '/_ah/api';
