--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,9 @@
   <link href="static/css/style-responsive.css" rel="stylesheet" type="text/css"/>
   <link href="static/css/themes/light.css"  rel="stylesheet" type="text/css" id="style_color"/>
   <link href="static/plugins/uniform/css/uniform.default.css"  rel="stylesheet" type="text/css"/>
+  <link href="static/plugins/bootstrap-switch/static/stylesheets/bootstrap-switch-metro.css" rel="stylesheet" type="text/css"/>
   <link rel="stylesheet" href="static/css/datetimepicker.css"/>
+
   <!-- END GLOBAL MANDATORY STYLES -->
   <link rel="shortcut icon" href="favicon.ico" />
   <script type="text/javascript">
@@ -232,11 +234,11 @@
 
 
 
-    //var ROOT = '/_ah/api';
+    var ROOT = '/_ah/api';
 
    
 
-    var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+    //var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
@@ -353,6 +355,8 @@
   <script src="static/plugins/jquery.blockui.min.js" type="text/javascript"></script>  
   <script src="static/plugins/jquery.cookie.min.js" type="text/javascript"></script>
   <script src="static/plugins/uniform/jquery.uniform.min.js" type="text/javascript" ></script>
+  <script src="static/plugins/bootstrap-switch/static/js/bootstrap-switch.js" type="text/javascript" ></script>
+  
 
   <!-- END CORE PLUGINS -->
   
