--- a/templates/live/live_show_page.html
+++ b/templates/live/live_show_page.html
@@ -7,7 +7,7 @@
         <div class="container">
             <div class="span8">
                 <h1><a href="/#/accounts/p/1" data-toggle="tooltip" data-placement="bottom" title="Back to Accounts">
-            <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false"></a>     <a href="#" >Companies</a> > <a href="#">Buffer</a> > Growing your business tips and techniques</h1>
+            <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false"></a>     <a href="#" >Companies</a> > <a href="/live/companies/{{organization_id}}">{{show.organization_name}}</a> > {{show.name}}</h1>
             </div>
             <div class="span4">
                 <div class="pull-right get-in">
@@ -26,14 +26,23 @@
         <div class="row-fluid margin-bottom-30">
             <!-- BEGIN CAROUSEL -->            
             <div class="span8">
-              <iframe width="100%" height="450" src="http://www.youtube.com/embed/KQEv90hZsCk?rel=0" frameborder="0" allowfullscreen></iframe>             
+            {% if show.youtube_url %}
+              <iframe width="100%" height="450" src="http://www.youtube.com/embed/{{show.youtube_url}}?rel=0" frameborder="0" allowfullscreen></iframe>  
+            {% else %}
+              <img src="/static/img/gdl-stay-tuned.png" height="450"/>
+            {% endif %}           
             </div>
             <!-- END CAROUSEL -->                             
 
             <!-- BEGIN PORTFOLIO DESCRIPTION -->            
             <div class="span4">
+                
                 <h2>About</h2>
-                <p>A short introduction to the Load Balancing feature in Google Compute Engine, with a demo! Load Balancing documentation: https://developers.google.com/compute/docs/load-balancing/</p>
+                {% if show.description %}
+                <p>{{show.description}}</p>
+                {}
+                {% endif %}
+
                 <h2>When?</h2>
                     <p>Oct. 1 3 p.m.-3:30 p.m. (PDT)</p>
                     <p><a class="add-calendar" href="http://www.google.com/calendar/event?action=TEMPLATE&amp;text=Google%20Compute%20Engine%20Load%20Balancing%2C%20a%20quick%20introduction%20&amp;dates=20131001T220000Z/20131001T223000Z&amp;sprop=name%3AGoogle%20Developers&amp;sprop=website%3Adevelopers.google.com&amp;details=https%3A//developers.google.com/live/shows/4603780578410496" target="_blank" data-event="None Google Compute Engine Load Balancing, a quick introduction ">
